# data-engineering.portfolio

./: README.md
crypto-pipeline/: .gitignore  pyproject.toml
crypto-pipeline/data-ingestion/: crypto_api_extraction.py  crypto_report_2025-10-04.csv  main.py  s3_file_upload.py
crypto-pipeline/data-ingestion/crypto_reports/: crypto_report_2025-10-06.csv  crypto_report_2025-10-09.csv
crypto-pipeline/terraform/: main.tf  terraform.tfstate
target_bot/: main.py  product_monitor.py  pyproject.toml
