[project]
name = "target-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "selenium>=4.36.0",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
]
